--- a/examples/00-load-dataset.ipynb
+++ b/examples/00-load-dataset.ipynb
@@ -92,7 +92,7 @@
    "source": [
     "# load the dataset\n",
     "\n",
-    "dataset_config = DatasetConfig.from_config_file(DATASET_CONFIG_PATH)\n",
+    "dataset_config = DatasetConfig.from_config_path(DATASET_CONFIG_PATH)\n",
     "train_dataset = AutoDataset.from_config(dataset_config, split=\"train\", root=ROOT_DIR)\n"
    ]
   },
@@ -123,18 +123,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.16"
   }
  },
  "nbformat": 4,
