--- a/experiments/notebooks/01-jointformer-training.ipynb
+++ b/experiments/notebooks/01-jointformer-training.ipynb
@@ -90,8 +90,8 @@
    "source": [
     "# Test Datsaset\n",
     "\n",
-    "dataset_config = DatasetConfig.from_config_file(PATH_TO_DATASET_CONFIG)\n",
-    "tokenizer_config = TokenizerConfig.from_config_file(PATH_TO_TOKENIZER_CONFIG)\n",
+    "dataset_config = DatasetConfig.from_config_path(PATH_TO_DATASET_CONFIG)\n",
+    "tokenizer_config = TokenizerConfig.from_config_path(PATH_TO_TOKENIZER_CONFIG)\n",
     "\n",
     "train_dataset = AutoDataset.from_config(dataset_config, root=DATA_DIR, split='train')\n",
     "val_dataset = AutoDataset.from_config(dataset_config, root=DATA_DIR, split='val')\n",
@@ -116,7 +116,7 @@
    "source": [
     "# Init Hyformer\n",
     "\n",
-    "model_config = ModelConfig.from_config_file(PATH_TO_MODEL_CONFIG)\n",
+    "model_config = ModelConfig.from_config_path(PATH_TO_MODEL_CONFIG)\n",
     "model = AutoModel.from_config(model_config, downstream_task=dataset_config.prediction_task_type, num_prediction_tasks=dataset_config.num_prediction_tasks, hidden_dim=256)\n",
     "# model.load_pretrained('ckpt.pt')"
    ]
@@ -136,7 +136,7 @@
    ],
    "source": [
     "\n",
-    "trainer_config = TrainerConfig.from_config_file(PATH_TO_TRAINER_CONFIG)\n",
+    "trainer_config = TrainerConfig.from_config_path(PATH_TO_TRAINER_CONFIG)\n",
     "trainer = Trainer(\n",
     "    config=trainer_config,\n",
     "    model=model,\n",
