--- a/experiments/notebooks/99-best-of-k-generation.ipynb
+++ b/experiments/notebooks/99-best-of-k-generation.ipynb
@@ -202,7 +202,7 @@
    "source": [
     "# Dataset\n",
     "\n",
-    "dataset_config = DatasetConfig.from_config_file(PATH_TO_DATASET_CONFIG)\n",
+    "dataset_config = DatasetConfig.from_config_path(PATH_TO_DATASET_CONFIG)\n",
     "train_dataset = AutoDataset.from_config(dataset_config, root=DATA_DIR, split='train')\n",
     "\n",
     "# Sample\n",
@@ -292,13 +292,13 @@
    ],
    "source": [
     "\n",
-    "tokenizer_config = TokenizerConfig.from_config_file(PATH_TO_TOKENIZER_CONFIG)\n",
+    "tokenizer_config = TokenizerConfig.from_config_path(PATH_TO_TOKENIZER_CONFIG)\n",
     "tokenizer = AutoTokenizer.from_config(tokenizer_config)\n",
     "\n",
     "\n",
     "# Model\n",
     "\n",
-    "model_config = ModelConfig.from_config_file(PATH_TO_MODEL_CONFIG)\n",
+    "model_config = ModelConfig.from_config_path(PATH_TO_MODEL_CONFIG)\n",
     "model = AutoModel.from_config(model_config, downstream_task='regression', num_prediction_tasks=1)\n",
     "model.load_pretrained(PATH_TO_MODEL_CKPT)\n",
     "model.to(device)\n",
@@ -1131,7 +1131,7 @@
     "\n",
     "PATH_TO_DATASET_CONFIG   = 'configs/datasets/guacamol_binary_qed/config.json'\n",
     "\n",
-    "dataset_config = DatasetConfig.from_config_file(PATH_TO_DATASET_CONFIG)\n",
+    "dataset_config = DatasetConfig.from_config_path(PATH_TO_DATASET_CONFIG)\n",
     "train_dataset = AutoDataset.from_config(dataset_config, root=DATA_DIR, split='train')\n"
    ]
   },
@@ -3363,11 +3363,11 @@
    ],
    "source": [
     "# Tokenize\n",
-    "tokenizer_config = TokenizerConfig.from_config_file(PATH_TO_TOKENIZER_CONFIG)\n",
+    "tokenizer_config = TokenizerConfig.from_config_path(PATH_TO_TOKENIZER_CONFIG)\n",
     "tokenizer = AutoTokenizer.from_config(tokenizer_config)\n",
     "\n",
     "# Model\n",
-    "model_config = ModelConfig.from_config_file(PATH_TO_MODEL_CONFIG)\n",
+    "model_config = ModelConfig.from_config_path(PATH_TO_MODEL_CONFIG)\n",
     "model = AutoModel.from_config(model_config, downstream_task=\"regression\", num_prediction_tasks=1)\n",
     "model.load_pretrained(PATH_TO_MODEL_CKPT)\n",
     "model.to(device)\n",
@@ -8346,7 +8346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer_config = TokenizerConfig.from_config_file(PATH_TO_TOKENIZER_CONFIG)\n",
+    "tokenizer_config = TokenizerConfig.from_config_path(PATH_TO_TOKENIZER_CONFIG)\n",
     "tokenizer = AutoTokenizer.from_config(tokenizer_config)"
    ]
   },
@@ -8533,7 +8533,7 @@
    "source": [
     "# Test Datsaset\n",
     "\n",
-    "dataset_config = DatasetConfig.from_config_file(PATH_TO_DATASET_CONFIG)\n",
+    "dataset_config = DatasetConfig.from_config_path(PATH_TO_DATASET_CONFIG)\n",
     "\n",
     "train_dataset = AutoDataset.from_config(dataset_config, root=DATA_DIR, split='train')\n",
     "val_dataset = AutoDataset.from_config(dataset_config, root=DATA_DIR, split='val')\n",
@@ -8546,7 +8546,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer_config = TokenizerConfig.from_config_file(PATH_TO_TOKENIZER_CONFIG)\n",
+    "tokenizer_config = TokenizerConfig.from_config_path(PATH_TO_TOKENIZER_CONFIG)\n",
     "tokenizer = AutoTokenizer.from_config(tokenizer_config)"
    ]
   },
@@ -8604,7 +8604,7 @@
    "source": [
     "# Model\n",
     "\n",
-    "model_config = ModelConfig.from_config_file(PATH_TO_MODEL_CONFIG)\n",
+    "model_config = ModelConfig.from_config_path(PATH_TO_MODEL_CONFIG)\n",
     "model = AutoModel.from_config(model_config, downstream_task=dataset_config.prediction_task_type, num_prediction_tasks=dataset_config.num_prediction_tasks)\n",
     "# model.load_pretrained('ckpt.pt')\n",
     "model.to(device)\n",
@@ -9278,7 +9278,7 @@
    "source": [
     "# Configs\n",
     "\n",
-    "dataset_config = DatasetConfig.from_config_file(PATH_TO_DATASET_CONFIG)"
+    "dataset_config = DatasetConfig.from_config_path(PATH_TO_DATASET_CONFIG)"
    ]
   },
   {
