--- a/experiments/notebooks/99-ood-detection.ipynb
+++ b/experiments/notebooks/99-ood-detection.ipynb
@@ -71,10 +71,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "task_config = TaskConfig.from_config_file(PATH_TO_TASK_CONFIG)\n",
-    "model_config = ModelConfig.from_config_file(PATH_TO_MODEL_CONFIG)\n",
-    "trainer_config = TrainerConfig.from_config_file(PATH_TO_TRAINER_CONFIG)\n",
-    "logger_config = LoggerConfig.from_config_file(PATH_TO_LOGGER_CONFIG) if PATH_TO_LOGGER_CONFIG else None"
+    "task_config = TaskConfig.from_config_path(PATH_TO_TASK_CONFIG)\n",
+    "model_config = ModelConfig.from_config_path(PATH_TO_MODEL_CONFIG)\n",
+    "trainer_config = TrainerConfig.from_config_path(PATH_TO_TRAINER_CONFIG)\n",
+    "logger_config = LoggerConfig.from_config_path(PATH_TO_LOGGER_CONFIG) if PATH_TO_LOGGER_CONFIG else None"
    ]
   },
   {
