--- a/experiments/notebooks/fudge.ipynb
+++ b/experiments/notebooks/fudge.ipynb
@@ -379,7 +379,7 @@
     "\n",
     "PATH_TO_DATASET_CONFIG   = 'configs/datasets/guacamol_binary_qed/config.json'\n",
     "\n",
-    "dataset_config = DatasetConfig.from_config_file(PATH_TO_DATASET_CONFIG)\n",
+    "dataset_config = DatasetConfig.from_config_path(PATH_TO_DATASET_CONFIG)\n",
     "train_dataset = AutoDataset.from_config(dataset_config, root=DATA_DIR, split='train')\n"
    ]
   },
@@ -2524,12 +2524,12 @@
     }
    ],
    "source": [
-    "tokenizer_config = TokenizerConfig.from_config_file(PATH_TO_TOKENIZER_CONFIG)\n",
+    "tokenizer_config = TokenizerConfig.from_config_path(PATH_TO_TOKENIZER_CONFIG)\n",
     "tokenizer = AutoTokenizer.from_config(tokenizer_config)\n",
     "\n",
     "# Model\n",
     "\n",
-    "model_config = ModelConfig.from_config_file(PATH_TO_MODEL_CONFIG)\n",
+    "model_config = ModelConfig.from_config_path(PATH_TO_MODEL_CONFIG)\n",
     "model = AutoModel.from_config(model_config, downstream_task=\"regression\", num_prediction_tasks=1)\n",
     "model.load_pretrained(PATH_TO_MODEL_CKPT)\n",
     "model.to(device)\n",
@@ -7479,7 +7479,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer_config = TokenizerConfig.from_config_file(PATH_TO_TOKENIZER_CONFIG)\n",
+    "tokenizer_config = TokenizerConfig.from_config_path(PATH_TO_TOKENIZER_CONFIG)\n",
     "tokenizer = AutoTokenizer.from_config(tokenizer_config)"
    ]
   },
@@ -7666,7 +7666,7 @@
    "source": [
     "# Test Datsaset\n",
     "\n",
-    "dataset_config = DatasetConfig.from_config_file(PATH_TO_DATASET_CONFIG)\n",
+    "dataset_config = DatasetConfig.from_config_path(PATH_TO_DATASET_CONFIG)\n",
     "\n",
     "train_dataset = AutoDataset.from_config(dataset_config, root=DATA_DIR, split='train')\n",
     "val_dataset = AutoDataset.from_config(dataset_config, root=DATA_DIR, split='val')\n",
@@ -7679,7 +7679,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer_config = TokenizerConfig.from_config_file(PATH_TO_TOKENIZER_CONFIG)\n",
+    "tokenizer_config = TokenizerConfig.from_config_path(PATH_TO_TOKENIZER_CONFIG)\n",
     "tokenizer = AutoTokenizer.from_config(tokenizer_config)"
    ]
   },
@@ -7737,7 +7737,7 @@
    "source": [
     "# Model\n",
     "\n",
-    "model_config = ModelConfig.from_config_file(PATH_TO_MODEL_CONFIG)\n",
+    "model_config = ModelConfig.from_config_path(PATH_TO_MODEL_CONFIG)\n",
     "model = AutoModel.from_config(model_config, downstream_task=dataset_config.prediction_task_type, num_prediction_tasks=dataset_config.num_prediction_tasks)\n",
     "# model.load_pretrained('ckpt.pt')\n",
     "model.to(device)\n",
@@ -8411,7 +8411,7 @@
    "source": [
     "# Configs\n",
     "\n",
-    "dataset_config = DatasetConfig.from_config_file(PATH_TO_DATASET_CONFIG)"
+    "dataset_config = DatasetConfig.from_config_path(PATH_TO_DATASET_CONFIG)"
    ]
   },
   {
@@ -8672,7 +8672,7 @@
     "if not os.path.exists(data_path):\n",
     "    os.makedirs(data_path)\n",
     "\n",
-    "dataset_config = DatasetConfig.from_config_file(PATH_TO_DATASET_CONFIG)\n",
+    "dataset_config = DatasetConfig.from_config_path(PATH_TO_DATASET_CONFIG)\n",
     "oracle_qed = QED(verbose=False, dtype='np')\n"
    ]
   },
