--- a/examples/01-generate-molecules.ipynb
+++ b/examples/01-generate-molecules.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,6 +146,287 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MolGPT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Paths\n",
+    "\n",
+    "MODEL_NAME = 'molgpt'\n",
+    "\n",
+    "MODEL_CONFIG_PATH = f'configs/models/{MODEL_NAME}/config.json'\n",
+    "MODEL_CHECKPOINT_PATH = f'/lustre/groups/aih/hyformer/results/distribution_learning/guacamol/molgpt/guacamol_nocond.pt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Filtering data: 100%|██████████| 1/1 [00:00<00:00, 1608.25it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed key: prop_nn.weight from checkpoint; not found in model or size mismatch.\n",
+      "Removed key: prop_nn.bias from checkpoint; not found in model or size mismatch.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GPT(\n",
+       "  (tok_emb): Embedding(94, 256)\n",
+       "  (type_emb): Embedding(2, 256)\n",
+       "  (drop): Dropout(p=0.1, inplace=False)\n",
+       "  (blocks): Sequential(\n",
+       "    (0): Block(\n",
+       "      (ln1): LayerNorm((256,), eps=1e-05, elementwise_affine=True)\n",
+       "      (ln2): LayerNorm((256,), eps=1e-05, elementwise_affine=True)\n",
+       "      (attn): CausalSelfAttention(\n",
+       "        (key): Linear(in_features=256, out_features=256, bias=True)\n",
+       "        (query): Linear(in_features=256, out_features=256, bias=True)\n",
+       "        (value): Linear(in_features=256, out_features=256, bias=True)\n",
+       "        (attn_drop): Dropout(p=0.1, inplace=False)\n",
+       "        (resid_drop): Dropout(p=0.1, inplace=False)\n",
+       "        (proj): Linear(in_features=256, out_features=256, bias=True)\n",
+       "      )\n",
+       "      (mlp): Sequential(\n",
+       "        (0): Linear(in_features=256, out_features=1024, bias=True)\n",
+       "        (1): GELU(approximate='none')\n",
+       "        (2): Linear(in_features=1024, out_features=256, bias=True)\n",
+       "        (3): Dropout(p=0.1, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "    (1): Block(\n",
+       "      (ln1): LayerNorm((256,), eps=1e-05, elementwise_affine=True)\n",
+       "      (ln2): LayerNorm((256,), eps=1e-05, elementwise_affine=True)\n",
+       "      (attn): CausalSelfAttention(\n",
+       "        (key): Linear(in_features=256, out_features=256, bias=True)\n",
+       "        (query): Linear(in_features=256, out_features=256, bias=True)\n",
+       "        (value): Linear(in_features=256, out_features=256, bias=True)\n",
+       "        (attn_drop): Dropout(p=0.1, inplace=False)\n",
+       "        (resid_drop): Dropout(p=0.1, inplace=False)\n",
+       "        (proj): Linear(in_features=256, out_features=256, bias=True)\n",
+       "      )\n",
+       "      (mlp): Sequential(\n",
+       "        (0): Linear(in_features=256, out_features=1024, bias=True)\n",
+       "        (1): GELU(approximate='none')\n",
+       "        (2): Linear(in_features=1024, out_features=256, bias=True)\n",
+       "        (3): Dropout(p=0.1, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "    (2): Block(\n",
+       "      (ln1): LayerNorm((256,), eps=1e-05, elementwise_affine=True)\n",
+       "      (ln2): LayerNorm((256,), eps=1e-05, elementwise_affine=True)\n",
+       "      (attn): CausalSelfAttention(\n",
+       "        (key): Linear(in_features=256, out_features=256, bias=True)\n",
+       "        (query): Linear(in_features=256, out_features=256, bias=True)\n",
+       "        (value): Linear(in_features=256, out_features=256, bias=True)\n",
+       "        (attn_drop): Dropout(p=0.1, inplace=False)\n",
+       "        (resid_drop): Dropout(p=0.1, inplace=False)\n",
+       "        (proj): Linear(in_features=256, out_features=256, bias=True)\n",
+       "      )\n",
+       "      (mlp): Sequential(\n",
+       "        (0): Linear(in_features=256, out_features=1024, bias=True)\n",
+       "        (1): GELU(approximate='none')\n",
+       "        (2): Linear(in_features=1024, out_features=256, bias=True)\n",
+       "        (3): Dropout(p=0.1, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "    (3): Block(\n",
+       "      (ln1): LayerNorm((256,), eps=1e-05, elementwise_affine=True)\n",
+       "      (ln2): LayerNorm((256,), eps=1e-05, elementwise_affine=True)\n",
+       "      (attn): CausalSelfAttention(\n",
+       "        (key): Linear(in_features=256, out_features=256, bias=True)\n",
+       "        (query): Linear(in_features=256, out_features=256, bias=True)\n",
+       "        (value): Linear(in_features=256, out_features=256, bias=True)\n",
+       "        (attn_drop): Dropout(p=0.1, inplace=False)\n",
+       "        (resid_drop): Dropout(p=0.1, inplace=False)\n",
+       "        (proj): Linear(in_features=256, out_features=256, bias=True)\n",
+       "      )\n",
+       "      (mlp): Sequential(\n",
+       "        (0): Linear(in_features=256, out_features=1024, bias=True)\n",
+       "        (1): GELU(approximate='none')\n",
+       "        (2): Linear(in_features=1024, out_features=256, bias=True)\n",
+       "        (3): Dropout(p=0.1, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "    (4): Block(\n",
+       "      (ln1): LayerNorm((256,), eps=1e-05, elementwise_affine=True)\n",
+       "      (ln2): LayerNorm((256,), eps=1e-05, elementwise_affine=True)\n",
+       "      (attn): CausalSelfAttention(\n",
+       "        (key): Linear(in_features=256, out_features=256, bias=True)\n",
+       "        (query): Linear(in_features=256, out_features=256, bias=True)\n",
+       "        (value): Linear(in_features=256, out_features=256, bias=True)\n",
+       "        (attn_drop): Dropout(p=0.1, inplace=False)\n",
+       "        (resid_drop): Dropout(p=0.1, inplace=False)\n",
+       "        (proj): Linear(in_features=256, out_features=256, bias=True)\n",
+       "      )\n",
+       "      (mlp): Sequential(\n",
+       "        (0): Linear(in_features=256, out_features=1024, bias=True)\n",
+       "        (1): GELU(approximate='none')\n",
+       "        (2): Linear(in_features=1024, out_features=256, bias=True)\n",
+       "        (3): Dropout(p=0.1, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "    (5): Block(\n",
+       "      (ln1): LayerNorm((256,), eps=1e-05, elementwise_affine=True)\n",
+       "      (ln2): LayerNorm((256,), eps=1e-05, elementwise_affine=True)\n",
+       "      (attn): CausalSelfAttention(\n",
+       "        (key): Linear(in_features=256, out_features=256, bias=True)\n",
+       "        (query): Linear(in_features=256, out_features=256, bias=True)\n",
+       "        (value): Linear(in_features=256, out_features=256, bias=True)\n",
+       "        (attn_drop): Dropout(p=0.1, inplace=False)\n",
+       "        (resid_drop): Dropout(p=0.1, inplace=False)\n",
+       "        (proj): Linear(in_features=256, out_features=256, bias=True)\n",
+       "      )\n",
+       "      (mlp): Sequential(\n",
+       "        (0): Linear(in_features=256, out_features=1024, bias=True)\n",
+       "        (1): GELU(approximate='none')\n",
+       "        (2): Linear(in_features=1024, out_features=256, bias=True)\n",
+       "        (3): Dropout(p=0.1, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "    (6): Block(\n",
+       "      (ln1): LayerNorm((256,), eps=1e-05, elementwise_affine=True)\n",
+       "      (ln2): LayerNorm((256,), eps=1e-05, elementwise_affine=True)\n",
+       "      (attn): CausalSelfAttention(\n",
+       "        (key): Linear(in_features=256, out_features=256, bias=True)\n",
+       "        (query): Linear(in_features=256, out_features=256, bias=True)\n",
+       "        (value): Linear(in_features=256, out_features=256, bias=True)\n",
+       "        (attn_drop): Dropout(p=0.1, inplace=False)\n",
+       "        (resid_drop): Dropout(p=0.1, inplace=False)\n",
+       "        (proj): Linear(in_features=256, out_features=256, bias=True)\n",
+       "      )\n",
+       "      (mlp): Sequential(\n",
+       "        (0): Linear(in_features=256, out_features=1024, bias=True)\n",
+       "        (1): GELU(approximate='none')\n",
+       "        (2): Linear(in_features=1024, out_features=256, bias=True)\n",
+       "        (3): Dropout(p=0.1, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "    (7): Block(\n",
+       "      (ln1): LayerNorm((256,), eps=1e-05, elementwise_affine=True)\n",
+       "      (ln2): LayerNorm((256,), eps=1e-05, elementwise_affine=True)\n",
+       "      (attn): CausalSelfAttention(\n",
+       "        (key): Linear(in_features=256, out_features=256, bias=True)\n",
+       "        (query): Linear(in_features=256, out_features=256, bias=True)\n",
+       "        (value): Linear(in_features=256, out_features=256, bias=True)\n",
+       "        (attn_drop): Dropout(p=0.1, inplace=False)\n",
+       "        (resid_drop): Dropout(p=0.1, inplace=False)\n",
+       "        (proj): Linear(in_features=256, out_features=256, bias=True)\n",
+       "      )\n",
+       "      (mlp): Sequential(\n",
+       "        (0): Linear(in_features=256, out_features=1024, bias=True)\n",
+       "        (1): GELU(approximate='none')\n",
+       "        (2): Linear(in_features=1024, out_features=256, bias=True)\n",
+       "        (3): Dropout(p=0.1, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (ln_f): LayerNorm((256,), eps=1e-05, elementwise_affine=True)\n",
+       "  (head): Linear(in_features=256, out_features=94, bias=False)\n",
+       ")"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load dataset\n",
+    "\n",
+    "from hyformer.models.baselines.molgpt import SmilesDataset\n",
+    "\n",
+    "dataset = SmilesDataset(['C'])\n",
+    "\n",
+    "# Load model\n",
+    "tokenizer = None\n",
+    "\n",
+    "# Load model\n",
+    "model_config = ModelConfig.from_config_filepath(MODEL_CONFIG_PATH)\n",
+    "model = AutoModel.from_config(model_config)\n",
+    "model.load_pretrained(filepath=MODEL_CHECKPOINT_PATH)\n",
+    "model._model.to('cuda')\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "batch_size = 2\n",
+    "x = torch.tensor([dataset.stoi[s] for s in dataset.regex.findall('C')], dtype=torch.long)[None,...].repeat(batch_size, 1).to('cuda')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[25], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m y \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msample\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msteps\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_config\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mblock_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtemperature\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.7\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msample\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtop_k\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprop\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mscaffold\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/lustre/groups/aih/hyformer/env/hyformer_experiments/lib/python3.10/site-packages/torch/utils/_contextlib.py:115\u001b[0m, in \u001b[0;36mcontext_decorator.<locals>.decorate_context\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    112\u001b[0m \u001b[38;5;129m@functools\u001b[39m\u001b[38;5;241m.\u001b[39mwraps(func)\n\u001b[1;32m    113\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mdecorate_context\u001b[39m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m    114\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m ctx_factory():\n\u001b[0;32m--> 115\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/ictstr01/home/aih/adam.izdebski/projects/hyformer/hyformer/models/baselines/molgpt.py:93\u001b[0m, in \u001b[0;36mMolGPT.sample\u001b[0;34m(self, x, steps, temperature, sample, top_k, prop, scaffold)\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(steps):\n\u001b[1;32m     92\u001b[0m     x_cond \u001b[38;5;241m=\u001b[39m x \u001b[38;5;28;01mif\u001b[39;00m x\u001b[38;5;241m.\u001b[39msize(\u001b[38;5;241m1\u001b[39m) \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m block_size \u001b[38;5;28;01melse\u001b[39;00m x[:, \u001b[38;5;241m-\u001b[39mblock_size:] \u001b[38;5;66;03m# crop context if needed\u001b[39;00m\n\u001b[0;32m---> 93\u001b[0m     logits, _, _ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_model(x_cond, prop \u001b[38;5;241m=\u001b[39m prop, scaffold \u001b[38;5;241m=\u001b[39m scaffold)   \u001b[38;5;66;03m# for liggpt\u001b[39;00m\n\u001b[1;32m     94\u001b[0m     \u001b[38;5;66;03m# logits, _, _ = model(x_cond)   # for char_rnn\u001b[39;00m\n\u001b[1;32m     95\u001b[0m     \u001b[38;5;66;03m# pluck the logits at the final step and scale by temperature\u001b[39;00m\n\u001b[1;32m     96\u001b[0m     logits \u001b[38;5;241m=\u001b[39m logits[:, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, :] \u001b[38;5;241m/\u001b[39m temperature\n",
+      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 3)"
+     ]
+    }
+   ],
+   "source": [
+    "y = model.sample(x=x, steps=model._config.block_size, temperature=0.7, sample=True, top_k=None, prop = None, scaffold = None)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "for gen_mol in y:\n",
+    "        completion = ''.join([itos[int(i)] for i in gen_mol])\n",
+    "        completion = completion.replace('<', '')\n",
+    "        # gen_smiles.append(completion)\n",
+    "        mol = get_mol(completion)\n",
+    "        if mol:\n",
+    "                molecules.append(mol)"
+   ]
   }
  ],
  "metadata": {
