add amino acid tokenizer

--- a/examples/99-debug-training.ipynb
+++ b/examples/99-debug-training.ipynb
@@ -1181,6 +1181,126 @@
     "                   \"attention_mask\": torch.tensor([[1, 1, 1]]).to(device),\n",
     "                   \"task\": \"lm\"}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "from hyformer.utils.datasets.sequence import SequenceDataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load peptide dataset\n",
+    "\n",
+    "data_filepath = \"/lustre/groups/aih/hyformer/data_proprietary/peptides/mic/raw/mic_data.csv\"\n",
+    "\n",
+    "_df = pd.read_csv(data_filepath, index_col=0)\n",
+    "data = _df['sequence']\n",
+    "target = _df['value']\n",
+    "\n",
+    "dataset = SequenceDataset(data=data, target=target)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': 'AAAAAAAAAAGIGKFLHSAKKFGKAFVGEIMNS', 'target': 2.099950350098421}"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TOKENIZER_CONFIG_PATH = \"configs/tokenizers/amino_acid/config.json\"\n",
+    "\n",
+    "tokenizer_config = TokenizerConfig.from_config_filepath(TOKENIZER_CONFIG_PATH)\n",
+    "tokenizer = AutoTokenizer.from_config(tokenizer_config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "289b9b3da193462a893e737ddafb964b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/4546 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from tqdm.auto import tqdm\n",
+    "\n",
+    "\n",
+    "for idx in tqdm(range(len(dataset))):\n",
+    "    sample = dataset[idx]\n",
+    "    input_ids = tokenizer(sample['data'], task='lm')['input_ids']\n",
+    "    sample_tokens = tokenizer.decode(torch.tensor(input_ids).reshape(1, -1))\n",
+    "    if sample['data'] != sample_tokens:\n",
+    "        print(f\"Mismatch at index {idx}\")\n",
+    "        print(f\"Original: {sample['data']}\")\n",
+    "        print(f\"Decoded: {sample_tokens}\")\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': 'YWRWRW', 'target': 1.278935990813498}"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
