modify optimizer behaviour

--- a/examples/02-build-vocabulary.ipynb
+++ b/examples/02-build-vocabulary.ipynb
@@ -883,63 +883,331 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['#',\n",
-       " '(',\n",
-       " ')',\n",
-       " '-',\n",
-       " '/',\n",
-       " '1',\n",
-       " '2',\n",
-       " '3',\n",
-       " '4',\n",
-       " '5',\n",
-       " '=',\n",
-       " 'B',\n",
-       " 'Br',\n",
-       " 'C',\n",
-       " 'Cl',\n",
-       " 'F',\n",
-       " 'N',\n",
-       " 'O',\n",
-       " 'P',\n",
-       " 'S',\n",
-       " '[C@@H]',\n",
-       " '[C@H]',\n",
-       " '[C@]',\n",
-       " '[Cu-3]',\n",
-       " '[N+]',\n",
-       " '[N@@]',\n",
-       " '[NH2+]',\n",
-       " '[NH]',\n",
-       " '[O+]',\n",
-       " '[O-]',\n",
-       " '[SiH]',\n",
-       " '[Si]',\n",
-       " '[n+]',\n",
-       " '[nH+]',\n",
-       " '[nH]',\n",
-       " '[o+]',\n",
-       " '\\\\',\n",
-       " 'c',\n",
-       " 'n',\n",
-       " 'o',\n",
-       " 's']"
+       "75"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# save tokens\n",
+    "len(tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded vocabulary length: 458\n"
+     ]
+    }
+   ],
+   "source": [
+    "vocab = {}\n",
+    "with open('data/vocabulary/unimol.txt', \"r\", encoding=\"utf-8\") as f:\n",
+    "    for i, line in enumerate(f):\n",
+    "        token = line.strip()\n",
+    "        if token:  # Skip empty lines\n",
+    "            vocab[token] = i\n",
+    "            \n",
+    "print(\"Loaded vocabulary length:\", len(vocab))\n",
     "\n",
+    "tokens = list(vocab.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extended vocabulary length: 75\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Add new tokens to vocabulary\n",
+    "\n",
+    "new_tokens = []\n",
+    "data = pd.read_csv(ADDITIONAL_DATASETS_FILEPATH, index_col=0)['standard_smiles'].tolist()\n",
+    "\n",
+    "for idx in range(len(data)):\n",
+    "    new_tokens.extend(tokenizer.get_tokens(data[idx]))\n",
+    "\n",
+    "new_tokens = list(set(new_tokens))\n",
+    "\n",
+    "print(\"Extended vocabulary length:\", len(new_tokens))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokens_extended = list(set(tokens + new_tokens))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "460"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(tokens_extended)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data/vocabulary/unimol_extended.txt', 'w') as f:\n",
+    "    for token in tokens_extended:\n",
+    "        f.write(token + '\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['[S-]',\n",
+       " '[n+]',\n",
+       " '\\\\',\n",
+       " '5',\n",
+       " '.',\n",
+       " 'I',\n",
+       " '[se]',\n",
+       " '[Li+]',\n",
+       " '[S+]',\n",
+       " '[I-]',\n",
+       " '[Hg]',\n",
+       " '[Gd+3]',\n",
+       " 'c',\n",
+       " 'O',\n",
+       " '4',\n",
+       " 'C',\n",
+       " '[o+]',\n",
+       " '[Pt]',\n",
+       " '[2H]',\n",
+       " '[Co+3]',\n",
+       " 'P',\n",
+       " '[Cl-]',\n",
+       " '[C@]',\n",
+       " '[n-]',\n",
+       " '[Cu+2]',\n",
+       " 'n',\n",
+       " '[C@@]',\n",
+       " '-',\n",
+       " '[N@@+]',\n",
+       " 'B',\n",
+       " '=',\n",
+       " 's',\n",
+       " '[Ca+2]',\n",
+       " ')',\n",
+       " '[nH]',\n",
+       " '[P@]',\n",
+       " '[Br-]',\n",
+       " '2',\n",
+       " '3',\n",
+       " '[C@H]',\n",
+       " '#',\n",
+       " '[O-]',\n",
+       " 'Br',\n",
+       " '[C-]',\n",
+       " '9',\n",
+       " '/',\n",
+       " '[N@+]',\n",
+       " '7',\n",
+       " '[Se]',\n",
+       " '[Au+]',\n",
+       " 'N',\n",
+       " '[Fe+4]',\n",
+       " 'F',\n",
+       " 'S',\n",
+       " '[C@@H]',\n",
+       " '[Sb]',\n",
+       " '[nH+]',\n",
+       " '[N+]',\n",
+       " '[Na+]',\n",
+       " 'o',\n",
+       " '[NH2+]',\n",
+       " '[As]',\n",
+       " '8',\n",
+       " '[cH-]',\n",
+       " '[Mn+2]',\n",
+       " '[Zn+2]',\n",
+       " '1',\n",
+       " '[N-]',\n",
+       " '[K+]',\n",
+       " '[Pt+2]',\n",
+       " '(',\n",
+       " '6',\n",
+       " '[NH+]',\n",
+       " '[c+]',\n",
+       " 'Cl']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_tokens = []\n",
+    "\n",
+    "for idx in range(len(data)):\n",
+    "    new_tokens.extend(tokenizer.get_tokens(data[idx]))\n",
+    "\n",
+    "new_tokens = list(set(new_tokens))\n",
+    "\n",
+    "new_tokens\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokens.extend(new_tokens)\n",
+    "\n",
+    "tokens = list(set(tokens))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['6',\n",
+       " '[S-]',\n",
+       " '.',\n",
+       " '[n+]',\n",
+       " '\\\\',\n",
+       " '5',\n",
+       " 'I',\n",
+       " '[NH+]',\n",
+       " '[se]',\n",
+       " '[Li+]',\n",
+       " '[S+]',\n",
+       " '[I-]',\n",
+       " 'c',\n",
+       " 'O',\n",
+       " '4',\n",
+       " 'C',\n",
+       " '[o+]',\n",
+       " '(',\n",
+       " '[Pt]',\n",
+       " '[2H]',\n",
+       " '[Co+3]',\n",
+       " 'P',\n",
+       " '[Cl-]',\n",
+       " '[K+]',\n",
+       " '[C@]',\n",
+       " '[n-]',\n",
+       " 'n',\n",
+       " '[C@@]',\n",
+       " '-',\n",
+       " 'B',\n",
+       " '=',\n",
+       " '[Ca+2]',\n",
+       " ')',\n",
+       " '[nH]',\n",
+       " '[P@]',\n",
+       " '[Br-]',\n",
+       " '2',\n",
+       " '3',\n",
+       " '[C@H]',\n",
+       " '#',\n",
+       " '[O-]',\n",
+       " 'Br',\n",
+       " '[C-]',\n",
+       " '9',\n",
+       " '/',\n",
+       " '[N@+]',\n",
+       " '7',\n",
+       " '[Se]',\n",
+       " '[Au+]',\n",
+       " 'N',\n",
+       " '[Fe+4]',\n",
+       " 'F',\n",
+       " 'S',\n",
+       " '[C@@H]',\n",
+       " '[Sb]',\n",
+       " 'Cl',\n",
+       " '[nH+]',\n",
+       " '[N+]',\n",
+       " '[Na+]',\n",
+       " 'o',\n",
+       " '[NH2+]',\n",
+       " '[As]',\n",
+       " '8',\n",
+       " '[cH-]',\n",
+       " '[Mn+2]',\n",
+       " '[Zn+2]',\n",
+       " '1',\n",
+       " '[N-]',\n",
+       " '[Hg]',\n",
+       " '[Pt+2]',\n",
+       " 's',\n",
+       " '[Gd+3]',\n",
+       " '[N@@+]',\n",
+       " '[c+]',\n",
+       " '[Cu+2]']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "tokens"
    ]
   },
