--- a/examples/99-debug-training.ipynb
+++ b/examples/99-debug-training.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Imports\n",
     "\n",
@@ -48,21 +39,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "DATA_DIR = \"/lustre/groups/aih/hyformer/data\"\n",
     "\n",
-    "DATASET_CONFIG_PATH = \"configs/datasets/guacamol/config.json\"\n",
-    "TOKENIZER_CONFIG_PATH = \"configs/tokenizers/smiles/guacamol/config.json\"\n",
-    "MODEL_CONFIG_PATH = \"configs/models/guacamol/hyformer_small/config.json\"\n",
-    "TRAINER_CONFIG_PATH = \"configs/trainers/distribution_learning/guacamol/lm/config.json\"\n"
+    "DATASET_CONFIG_PATH = \"configs/datasets/unimol/config.json\"\n",
+    "TOKENIZER_CONFIG_PATH = \"configs/tokenizers/smiles/unimol/config.json\"\n",
+    "MODEL_CONFIG_PATH = \"configs/models/unimol_data/hyformer/config.json\"\n",
+    "TRAINER_CONFIG_PATH = \"configs/trainers/distribution_learning/unimol/combined/config.json\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,11 +88,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "tokenizer = AutoTokenizer.from_config(tokenizer_config)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "467"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(tokenizer)"
    ]
   },
   {
