Remove deprecated example notebooks and scripts for molecule generation, dataset loading, and training to streamline the project structure. Update .gitignore to exclude temporary files and IDE configurations.

--- a/experiments/notebooks/01-jointformer-training.ipynb
+++ b/experiments/notebooks/01-jointformer-training.ipynb
@@ -33,8 +33,8 @@
     "from hyformer.configs.model import ModelConfig\n",
     "from hyformer.configs.trainer import TrainerConfig\n",
     "\n",
-    "from hyformer.utils.datasets.auto import AutoDataset\n",
-    "from hyformer.utils.tokenizers.auto import AutoTokenizer\n",
+    "from hyformer.utils.data.datasets.auto import AutoDataset\n",
+    "from hyformer.tokenizers.auto import AutoTokenizer\n",
     "from hyformer.models.auto import AutoModel\n",
     "from hyformer.trainers.trainer import Trainer\n",
     "\n",
