--- a/experiments/notebooks/99-ood-detection.ipynb
+++ b/experiments/notebooks/99-ood-detection.ipynb
@@ -18,8 +18,8 @@
     "from hyformer.configs.trainer import TrainerConfig\n",
     "from hyformer.configs.logger import LoggerConfig\n",
     "\n",
-    "from hyformer.utils.datasets.auto import AutoDataset\n",
-    "from hyformer.utils.tokenizers.auto import AutoTokenizer\n",
+    "from hyformer.utils.data.datasets.auto import AutoDataset\n",
+    "from hyformer.tokenizers.auto import AutoTokenizer\n",
     "from hyformer.models.auto import AutoModel\n",
     "from hyformer.utils.loggers.auto import AutoLogger\n",
     "\n",
@@ -1289,7 +1289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hyformer.utils.datasets.smiles.base import SmilesDataset\n",
+    "from hyformer.utils.data.datasets.smiles.base import SmilesDataset\n",
     "\n",
     "smiles_dataset = SmilesDataset(data=smiles_test_scaffold)\n",
     "collator = DataCollator(tokenizer=tokenizer, tasks={'lm': 1})\n",
