--- a/experiments/notebooks/fudge.ipynb
+++ b/experiments/notebooks/fudge.ipynb
@@ -32,8 +32,8 @@
     "from hyformer.configs.model import ModelConfig\n",
     "from hyformer.configs.trainer import TrainerConfig\n",
     "\n",
-    "from hyformer.utils.datasets.auto import AutoDataset\n",
-    "from hyformer.utils.tokenizers.auto import AutoTokenizer\n",
+    "from hyformer.utils.data.datasets.auto import AutoDataset\n",
+    "from hyformer.tokenizers.auto import AutoTokenizer\n",
     "from hyformer.models.auto import AutoModel\n",
     "from hyformer.trainers.trainer import Trainer\n",
     "\n",
@@ -8623,7 +8623,7 @@
     "import numpy as np\n",
     "\n",
     "from hyformer.configs.dataset import DatasetConfig\n",
-    "from hyformer.utils.datasets.auto import AutoDataset\n",
+    "from hyformer.utils.data.datasets.auto import AutoDataset\n",
     "\n",
     "from hyformer.utils.runtime import set_seed\n",
     "\n",
