--- a/experiments/notebooks/00-hyformer-forward-test.ipynb
+++ b/experiments/notebooks/00-hyformer-forward-test.ipynb
@@ -30,9 +30,9 @@
     "from hyformer.configs.model import ModelConfig\n",
     "from hyformer.configs.trainer import TrainerConfig\n",
     "\n",
-    "from hyformer.utils.datasets.sequence import SequenceDataset\n",
-    "from hyformer.utils.datasets.auto import AutoDataset\n",
-    "from hyformer.utils.tokenizers.auto import AutoTokenizer\n",
+    "from hyformer.utils.data.datasets.sequence import SequenceDataset\n",
+    "from hyformer.utils.data.datasets.auto import AutoDataset\n",
+    "from hyformer.tokenizers.auto import AutoTokenizer\n",
     "from hyformer.models.auto import AutoModel\n",
     "from hyformer.trainers.trainer import Trainer\n",
     "\n",
